Flooding uses LinkedList